native/include/synth_ffi.h

void* synth_engine_create(double sampleRate, uint32_t blockSize);
void  synth_engine_destroy(void* engine);
void  synth_engine_process(void* engine, float* output, uint32_t numFrames);
void  synth_engine_reset(void* engine);
void  synth_engine_note_on(void* engine, int32_t midiNote, float velocity);
void  synth_engine_note_off(void* engine, int32_t midiNote);
void  synth_engine_all_notes_off(void* engine);
// Osc 1
void synth_engine_set_osc1_waveform(void* engine, int32_t v);
void synth_engine_set_osc1_octave(void* engine, int32_t v);
void synth_engine_set_osc1_detune(void* engine, float v);
void synth_engine_set_osc1_pulse_width(void* engine, float v);
void synth_engine_set_osc1_volume(void* engine, float v);
// Osc 2
void synth_engine_set_osc2_waveform(void* engine, int32_t v);
void synth_engine_set_osc2_octave(void* engine, int32_t v);
void synth_engine_set_osc2_detune(void* engine, float v);
void synth_engine_set_osc2_pulse_width(void* engine, float v);
void synth_engine_set_osc2_volume(void* engine, float v);
void synth_engine_set_osc_mix(void* engine, float v);
// Filter
void synth_engine_set_filter_type(void* engine, int32_t v);
void synth_engine_set_filter_cutoff(void* engine, float v);
void synth_engine_set_filter_resonance(void* engine, float v);
void synth_engine_set_filter_env_amount(void* engine, float v);
// Amp envelope
void synth_engine_set_amp_attack(void* engine, float v);
void synth_engine_set_amp_decay(void* engine, float v);
void synth_engine_set_amp_sustain(void* engine, float v);
void synth_engine_set_amp_release(void* engine, float v);
// Filter envelope
void synth_engine_set_filter_attack(void* engine, float v);
void synth_engine_set_filter_decay(void* engine, float v);
void synth_engine_set_filter_sustain(void* engine, float v);
void synth_engine_set_filter_release(void* engine, float v);
// LFO 1
void synth_engine_set_lfo1_waveform(void* engine, int32_t v);
void synth_engine_set_lfo1_rate(void* engine, float v);
void synth_engine_set_lfo1_depth(void* engine, float v);
void synth_engine_set_lfo1_target(void* engine, int32_t v);
// LFO 2
void synth_engine_set_lfo2_waveform(void* engine, int32_t v);
void synth_engine_set_lfo2_rate(void* engine, float v);
void synth_engine_set_lfo2_depth(void* engine, float v);
void synth_engine_set_lfo2_target(void* engine, int32_t v);
// FX: Chorus
void synth_engine_set_chorus_enabled(void* engine, int32_t v);
void synth_engine_set_chorus_rate(void* engine, float v);
void synth_engine_set_chorus_depth(void* engine, float v);
void synth_engine_set_chorus_mix(void* engine, float v);
// FX: Delay
void synth_engine_set_delay_enabled(void* engine, int32_t v);
void synth_engine_set_delay_time(void* engine, float v);
void synth_engine_set_delay_feedback(void* engine, float v);
void synth_engine_set_delay_mix(void* engine, float v);
// FX: Reverb
void synth_engine_set_reverb_enabled(void* engine, int32_t v);
void synth_engine_set_reverb_size(void* engine, float v);
void synth_engine_set_reverb_damping(void* engine, float v);
void synth_engine_set_reverb_mix(void* engine, float v);
// FX: Phaser
void synth_engine_set_phaser_enabled(void* engine, int32_t v);
void synth_engine_set_phaser_rate(void* engine, float v);
void synth_engine_set_phaser_depth(void* engine, float v);
void synth_engine_set_phaser_feedback(void* engine, float v);
void synth_engine_set_phaser_mix(void* engine, float v);
// FX: Drive
void synth_engine_set_drive_enabled(void* engine, int32_t v);
void synth_engine_set_drive_amount(void* engine, float v);
void synth_engine_set_drive_type(void* engine, int32_t v);
// Master
void synth_engine_set_master_volume(void* engine, float v);
int32_t synth_engine_get_active_voices(void* engine);