lib/ffi/openamp_synth.dart

// ignore_for_file: library_private_types_in_public_api
// Dart FFI bindings for libopenamp_dart_ffi.so (synth_engine symbols).
//
// Native source:
//   ~/projects/openamp/dsp-core/plugins/synth_engine/synth_ffi.{h,cpp}
// Built into the shared library by:
//   ~/projects/openamp/dsp-core/dart_ffi/CMakeLists.txt
// Shipped at native/libopenamp_dart_ffi.so relative to project root.

import 'dart:ffi';
import 'dart:io';

// ── Opaque handle ────────────────────────────────────────────────────────────

final class _SynthHandle extends Opaque {}

typedef SynthEngineRef = Pointer<_SynthHandle>;

// ── Native typedefs ──────────────────────────────────────────────────────────

typedef _CreateNative = SynthEngineRef Function(Double, Uint32);
typedef _CreateDart = SynthEngineRef Function(double, int);

typedef _VoidNative = Void Function(SynthEngineRef);
typedef _VoidDart = void Function(SynthEngineRef);

typedef _ProcessNative = Void Function(SynthEngineRef, Pointer<Float>, Uint32);
typedef _ProcessDart = void Function(SynthEngineRef, Pointer<Float>, int);

typedef _NoteOnNative = Void Function(SynthEngineRef, Int32, Float);
typedef _NoteOnDart = void Function(SynthEngineRef, int, double);

typedef _NoteOffNative = Void Function(SynthEngineRef, Int32);
typedef _NoteOffDart = void Function(SynthEngineRef, int);

typedef _SetIntNative = Void Function(SynthEngineRef, Int32);
typedef _SetIntDart = void Function(SynthEngineRef, int);

typedef _SetFloatNative = Void Function(SynthEngineRef, Float);
typedef _SetFloatDart = void Function(SynthEngineRef, double);

typedef _GetIntNative = Int32 Function(SynthEngineRef);
typedef _GetIntDart = int Function(SynthEngineRef);

// ── Library loader ───────────────────────────────────────────────────────────

DynamicLibrary _openLibrary() {
  if (Platform.isLinux) {
    final candidates = [
      'native/libopenamp_dart_ffi.so',
      './native/libopenamp_dart_ffi.so',
      '${Directory.current.path}/native/libopenamp_dart_ffi.so',
      'libopenamp_dart_ffi.so',
    ];
    for (final path in candidates) {
      try {
        return DynamicLibrary.open(path);
      } catch (_) {
        // try next
      }
    }
    return DynamicLibrary.open('libopenamp_dart_ffi.so');
  }
  if (Platform.isMacOS) {
    return DynamicLibrary.open('libopenamp_dart_ffi.dylib');
  }
  if (Platform.isWindows) {
    return DynamicLibrary.open('openamp_dart_ffi.dll');
  }
  if (Platform.isAndroid) {
    return DynamicLibrary.open('libopenamp_dart_ffi.so');
  }
  throw UnsupportedError(
      'OpenAmp synth FFI not supported on ${Platform.operatingSystem}');
}

// ── Bindings ─────────────────────────────────────────────────────────────────

class OpenAmpSynthBindings {
  OpenAmpSynthBindings._(DynamicLibrary lib)
      : lib = lib, // ignore: prefer_initializing_formals
        create = lib
            .lookupFunction<_CreateNative, _CreateDart>('synth_engine_create'),
        destroy = lib
            .lookupFunction<_VoidNative, _VoidDart>('synth_engine_destroy'),
        process = lib
            .lookupFunction<_ProcessNative, _ProcessDart>('synth_engine_process'),
        reset =
            lib.lookupFunction<_VoidNative, _VoidDart>('synth_engine_reset'),
        noteOn = lib.lookupFunction<_NoteOnNative, _NoteOnDart>(
            'synth_engine_note_on'),
        noteOff = lib.lookupFunction<_NoteOffNative, _NoteOffDart>(
            'synth_engine_note_off'),
        allNotesOff = lib.lookupFunction<_VoidNative, _VoidDart>(
            'synth_engine_all_notes_off'),
        // Osc 1
        setOsc1Waveform = lib.lookupFunction<_SetIntNative, _SetIntDart>(
            'synth_engine_set_osc1_waveform'),
        setOsc1Octave = lib.lookupFunction<_SetIntNative, _SetIntDart>(
            'synth_engine_set_osc1_octave'),
        setOsc1Detune = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_osc1_detune'),
        setOsc1PulseWidth = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_osc1_pulse_width'),
        setOsc1Volume = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_osc1_volume'),
        // Osc 2
        setOsc2Waveform = lib.lookupFunction<_SetIntNative, _SetIntDart>(
            'synth_engine_set_osc2_waveform'),
        setOsc2Octave = lib.lookupFunction<_SetIntNative, _SetIntDart>(
            'synth_engine_set_osc2_octave'),
        setOsc2Detune = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_osc2_detune'),
        setOsc2PulseWidth = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_osc2_pulse_width'),
        setOsc2Volume = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_osc2_volume'),
        setOscMix = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_osc_mix'),
        // Filter
        setFilterType = lib.lookupFunction<_SetIntNative, _SetIntDart>(
            'synth_engine_set_filter_type'),
        setFilterCutoff = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_filter_cutoff'),
        setFilterResonance = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_filter_resonance'),
        setFilterEnvAmount = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_filter_env_amount'),
        // Amp envelope
        setAmpAttack = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_amp_attack'),
        setAmpDecay = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_amp_decay'),
        setAmpSustain = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_amp_sustain'),
        setAmpRelease = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_amp_release'),
        // Filter envelope
        setFilterAttack = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_filter_attack'),
        setFilterDecay = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_filter_decay'),
        setFilterSustain = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_filter_sustain'),
        setFilterRelease = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_filter_release'),
        // LFO 1
        setLfo1Waveform = lib.lookupFunction<_SetIntNative, _SetIntDart>(
            'synth_engine_set_lfo1_waveform'),
        setLfo1Rate = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_lfo1_rate'),
        setLfo1Depth = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_lfo1_depth'),
        setLfo1Target = lib.lookupFunction<_SetIntNative, _SetIntDart>(
            'synth_engine_set_lfo1_target'),
        // LFO 2
        setLfo2Waveform = lib.lookupFunction<_SetIntNative, _SetIntDart>(
            'synth_engine_set_lfo2_waveform'),
        setLfo2Rate = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_lfo2_rate'),
        setLfo2Depth = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_lfo2_depth'),
        setLfo2Target = lib.lookupFunction<_SetIntNative, _SetIntDart>(
            'synth_engine_set_lfo2_target'),
        // FX: Chorus
        setChorusEnabled = lib.lookupFunction<_SetIntNative, _SetIntDart>(
            'synth_engine_set_chorus_enabled'),
        setChorusRate = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_chorus_rate'),
        setChorusDepth = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_chorus_depth'),
        setChorusMix = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_chorus_mix'),
        // FX: Delay
        setDelayEnabled = lib.lookupFunction<_SetIntNative, _SetIntDart>(
            'synth_engine_set_delay_enabled'),
        setDelayTime = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_delay_time'),
        setDelayFeedback = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_delay_feedback'),
        setDelayMix = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_delay_mix'),
        // FX: Reverb
        setReverbEnabled = lib.lookupFunction<_SetIntNative, _SetIntDart>(
            'synth_engine_set_reverb_enabled'),
        setReverbSize = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_reverb_size'),
        setReverbDamping = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_reverb_damping'),
        setReverbMix = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_reverb_mix'),
        // FX: Phaser
        setPhaserEnabled = lib.lookupFunction<_SetIntNative, _SetIntDart>(
            'synth_engine_set_phaser_enabled'),
        setPhaserRate = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_phaser_rate'),
        setPhaserDepth = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_phaser_depth'),
        setPhaserFeedback = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_phaser_feedback'),
        setPhaserMix = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_phaser_mix'),
        // FX: Drive
        setDriveEnabled = lib.lookupFunction<_SetIntNative, _SetIntDart>(
            'synth_engine_set_drive_enabled'),
        setDriveAmount = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_drive_amount'),
        setDriveType = lib.lookupFunction<_SetIntNative, _SetIntDart>(
            'synth_engine_set_drive_type'),
        // Master
        setMasterVolume = lib.lookupFunction<_SetFloatNative, _SetFloatDart>(
            'synth_engine_set_master_volume'),
        getActiveVoices = lib.lookupFunction<_GetIntNative, _GetIntDart>(
            'synth_engine_get_active_voices');

  static OpenAmpSynthBindings? _instance;
  static OpenAmpSynthBindings get instance =>
      _instance ??= OpenAmpSynthBindings._(_openLibrary());

  static bool get available {
    try {
      instance;
      return true;
    } catch (_) {
      return false;
    }
  }

  /// The DynamicLibrary handle the synth bindings opened. Exposed so
  /// sibling FFI binding tables (e.g. audio stream) can resolve their
  /// own symbols out of the same .so without re-opening it.
  final DynamicLibrary lib;

  // Lifecycle
  final _CreateDart create;
  final _VoidDart destroy;
  final _ProcessDart process;
  final _VoidDart reset;

  // MIDI
  final _NoteOnDart noteOn;
  final _NoteOffDart noteOff;
  final _VoidDart allNotesOff;

  // Osc 1
  final _SetIntDart setOsc1Waveform;
  final _SetIntDart setOsc1Octave;
  final _SetFloatDart setOsc1Detune;
  final _SetFloatDart setOsc1PulseWidth;
  final _SetFloatDart setOsc1Volume;

  // Osc 2
  final _SetIntDart setOsc2Waveform;
  final _SetIntDart setOsc2Octave;
  final _SetFloatDart setOsc2Detune;
  final _SetFloatDart setOsc2PulseWidth;
  final _SetFloatDart setOsc2Volume;
  final _SetFloatDart setOscMix;

  // Filter
  final _SetIntDart setFilterType;
  final _SetFloatDart setFilterCutoff;
  final _SetFloatDart setFilterResonance;
  final _SetFloatDart setFilterEnvAmount;

  // Amp envelope
  final _SetFloatDart setAmpAttack;
  final _SetFloatDart setAmpDecay;
  final _SetFloatDart setAmpSustain;
  final _SetFloatDart setAmpRelease;

  // Filter envelope
  final _SetFloatDart setFilterAttack;
  final _SetFloatDart setFilterDecay;
  final _SetFloatDart setFilterSustain;
  final _SetFloatDart setFilterRelease;
